tests/error/if_input.ca.output
Error occurred:
[tests/error/if_input.ca:1,0] if() | Expected bool input

